--- a/src/Components/Gallery.css
+++ b/src/Components/Gallery.css
@@ -61,7 +61,7 @@
     }
 
     .gallery-container {
-        padding: 1em 0;
+        padding: 1em 0 5em 0;
     }
     .gallery-grid {
         grid-template-columns: 1fr;
