--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background: url('../../public/assets/placeholder-bg.jpg') center center/cover no-repeat;
+    background: url('../../public/assets/img4.jpg') center center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,7 +57,7 @@
 
 @media (max-width: 768px) {
     .content h1 {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
     }
     .content p {
         font-size: 1rem;
